--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "homepage": "https://github.com/huy1999dnbk/sportShop#readme",
   "dependencies": {
+    "@google-cloud/dialogflow": "^4.6.0",
+    "@google-cloud/storage": "^5.16.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -34,7 +36,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "concurrently": "^6.4.0",
