--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@google-cloud/storage": "^5.16.1",
     "actions-on-google": "^2.14.0",
     "bcryptjs": "^2.4.3",
+    "damerau-levenshtein": "^1.0.8",
     "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -38,6 +39,9 @@
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "natural": "^5.1.13",
+    "store": "^2.0.12",
+    "string-similarity": "^4.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
