--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.2.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -16,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-form-stepper": "^1.4.3",
     "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.6",
@@ -27,6 +29,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
+    "swiper": "^7.4.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
