--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.6.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-form-stepper": "^1.4.3",
     "react-helmet": "^6.1.0",
