--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@google-cloud/storage": "^5.16.1",
     "actions-on-google": "^2.14.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "damerau-levenshtein": "^1.0.8",
     "dialogflow-fulfillment": "^0.6.1",
@@ -41,6 +42,7 @@
     "natural": "^5.1.13",
     "store": "^2.0.12",
     "string-similarity": "^4.0.4",
+    "stripe": "^8.203.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
